--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -6,9 +6,22 @@
     <title>Content Manager</title>
   </head>
   <body>
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-    <!-- <script src="https://unpkg.com/@ncwidgets/id"></script> -->
+    <script src="https://identity.netlify.com/v1/netlify-identity.js"></script>
+    <script src="https://unpkg.com/@ncwidgets/id"></script>
     <!-- Include the script that builds the page and powers Netlify CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+    <script>
+      if (document.readyState === 'loading') {
+        document.addEventListener('DOMContentLoaded', function () {
+          netlifyIdentity.init({
+            APIUrl: 'https://amap-goutte-eau.netlify.app/.netlify/identity',
+          });
+        });
+      } else {
+        netlifyIdentity.init({
+          APIUrl: 'https://amap-goutte-eau.netlify.app/.netlify/identity',
+        });
+      }
+    </script>
   </body>
 </html>
